Update to handheld

--- a/public/assets/css/media/01-handheld.scss
+++ b/public/assets/css/media/01-handheld.scss
@@ -24,4 +24,8 @@ $media-max-width                : 479px;
     // ------------------------------------------------------------------------------------------------------
     // HANDHELD STYLES
     
+    body {
+        overflow-x: hidden;
+    }
+    
 }
