--- a/public/assets/scss/utilities/grid-system.scss
+++ b/public/assets/scss/utilities/grid-system.scss
@@ -12,7 +12,7 @@
 // **************************************************
 // IMPORTS & VARIABLES
 
-@import "utilities/clearfix";
+@import "clearfix";
 
 $float-direction: left;
 $show-grid-background: false;
