--- a/public/assets/scss/media/03-tablet.scss
+++ b/public/assets/scss/media/03-tablet.scss
@@ -1,6 +1,6 @@
 
-$media-min-width                : 480px;
-$media-max-width                : 767px;
+$media-min-width                : 768px;
+$media-max-width                : 979px;
 
 @media screen and (min-width: $media-min-width) and (max-width: $media-max-width) {
     
@@ -10,18 +10,18 @@ $media-max-width                : 767px;
     $relative-font-sizing       : false;
     $base-font-size             : 14px;
     $base-line-height           : 24px;
-    @import "utilities/vertical-rhythm";
+    @import "../utilities/vertical-rhythm";
     @include establish-baseline();
     
-    $media                      : hl; // media-specific shortcut, e.g. "hl" for ".g-hl-#"
-    $max-units                  : 6; // number of columns
-    $col-width                  : 55px; // column width
+    $media                      : t; // media-specific shortcut, e.g. "t" for ".g-t-#"
+    $max-units                  : 12; // number of columns
+    $col-width                  : 40px; // column width
     $gutter-width               : 20px;  // gutter width
-    $units                      : 1 2 3 4 6; // only add the columns you really need
-    $pad-units                  : 1 2 3 4 6; // only add the pad-units you really need to push/pull/append/prepend
+    $units                      : 1 2 3 4 5 6 7 8 9 10 11 12; // only add the columns you really need
+    $pad-units                  : 1 2 3 4 5 6 7 8 9 10 11 12; // only add the pad-units you really need to push/pull/append/prepend
     @include grids($media, $units, $max-units, $col-width, $gutter-width, $pad-units);
     
     // ------------------------------------------------------------------------------------------------------
-    // HANDHELD LANDSCAPE STYLES
+    // TABLET STYLES
     
 }
