Improvements to grunt workflow

--- a/public/assets/scss/utilities/vertical-rhythm.scss
+++ b/public/assets/scss/utilities/vertical-rhythm.scss
@@ -47,9 +47,9 @@ $base-half-leader: $base-leader / 2;
   @return not (relative-unit($number) or unitless($number));
 }
 
-@if $relative-font-sizing and not relative-unit($font-unit) {
-  @warn "$relative-font-sizing is true but $font-unit is set to #{$font-unit} which is not a relative unit.";
-}
+// @if $relative-font-sizing and not relative-unit($font-unit) {
+//   @warn "$relative-font-sizing is true but $font-unit is set to #{$font-unit} which is not a relative unit.";
+// }
 
 // Establishes a font baseline for the given font-size.
 @mixin establish-baseline($font-size: $base-font-size) {
@@ -91,9 +91,9 @@ $base-half-leader: $base-leader / 2;
 // defaults to the smallest integer that is large enough to fit the font.
 // Use $from-size to adjust from a font-size other than the base font-size.
 @mixin adjust-font-size-to($to-size, $lines: lines-for-font-size($to-size), $from-size: $base-font-size) {
-  @if not $relative-font-sizing and $from-size != $base-font-size {
-    @warn "$relative-font-sizing is false but a relative font size was passed to adjust-font-size-to";
-  }
+  // @if not $relative-font-sizing and $from-size != $base-font-size {
+  //   @warn "$relative-font-sizing is false but a relative font size was passed to adjust-font-size-to";
+  // }
   
   font-size: $to-size;
   lines: $lines;
@@ -114,9 +114,9 @@ $base-half-leader: $base-leader / 2;
   $font-size: $base-font-size,
   $offset: 0
 ) {
-  @if not $relative-font-sizing and $font-size != $base-font-size {
-    @warn "$relative-font-sizing is false but a relative font size was passed to the rhythm function";
-  }
+  // @if not $relative-font-sizing and $font-size != $base-font-size {
+  //   @warn "$relative-font-sizing is false but a relative font size was passed to the rhythm function";
+  // }
   $rhythm: $font-unit * (($lines * $base-line-height - $offset) / $font-size);
   // Round the pixels down to nearest integer.
   @if unit($rhythm) == px {
@@ -177,9 +177,9 @@ $base-half-leader: $base-leader / 2;
 // Apply a border and whitespace to any side without destroying the vertical
 // rhythm. The whitespace must be greater than the width of the border.
 @mixin apply-side-rhythm-border($side, $width: 1px, $lines: 1, $font-size: $base-font-size, $border-style: $default-rhythm-border-style) {
-  @if not $relative-font-sizing and $font-size != $base-font-size {
-    @warn "$relative-font-sizing is false but a relative font size was passed to apply-side-rhythm-border";
-  }
+  // @if not $relative-font-sizing and $font-size != $base-font-size {
+  //   @warn "$relative-font-sizing is false but a relative font size was passed to apply-side-rhythm-border";
+  // }
   border-#{$side}: {
     style: $border-style;
     width: $font-unit * $width / $font-size;
@@ -189,9 +189,9 @@ $base-half-leader: $base-leader / 2;
 
 // Apply borders and whitespace equally to all sides.
 @mixin rhythm-borders($width: 1px, $lines: 1, $font-size: $base-font-size, $border-style: $default-rhythm-border-style) {
-  @if not $relative-font-sizing and $font-size != $base-font-size {
-    @warn "$relative-font-sizing is false but a relative font size was passed to rhythm-borders";
-  }
+  // @if not $relative-font-sizing and $font-size != $base-font-size {
+  //   @warn "$relative-font-sizing is false but a relative font size was passed to rhythm-borders";
+  // }
   border: {
     style: $border-style;
     width: $font-unit * $width / $font-size;
