added 24 col for reference

--- a/public/assets/scss/media/00-default.scss
+++ b/public/assets/scss/media/00-default.scss
@@ -12,7 +12,7 @@ $default-class              : d; // default shortcut which is needed in other co
 $max-units                  : 24; // number of columns
 $col-width                  : 20px; // column width
 $gutter-width               : 20px;  // gutter width
-$units                      : 2 4 6 8 10 12 14 16 18 24; // only add the columns you really need
+$units                      : 1 2 4 6 8 10 12 14 16 18 24; // only add the columns you really need
 $pad-units                  : 2 4 6 8 10 12 14 16 18 24; // only add the pad-units you really need to push/pull/append/prepend
 @include grids($default-class, $units, $max-units, $col-width, $gutter-width, $pad-units);
 
