--- a/public/assets/scss/media/04-large.scss
+++ b/public/assets/scss/media/04-large.scss
@@ -17,7 +17,7 @@ $media-min-width                : 1250px;
     $max-units                  : 24; // number of columns
     $col-width                  : 25px; // column width
     $gutter-width               : 25px;  // gutter width
-    $units                      : 2 3 4 6 8 9 12 16 18 24; // only add the columns you really need
+    $units                      : 1 2 3 4 6 8 9 12 16 18 24; // only add the columns you really need
     $pad-units                  : 2 3 4 6 8 9 12 16 18 24; // only add the pad-units you really need to push/pull/append/prepend
     @include grids($media, $units, $max-units, $col-width, $gutter-width, $pad-units);
     
