Add cache buster and rearrange scss to be more practical

--- a/public/assets/scss/components/_editor.scss
+++ b/public/assets/scss/components/_editor.scss
@@ -21,12 +21,12 @@
 		padding-bottom: 24px;
 	}
 	
-	h1 { @extend .h1; }
-	h2 { @extend .h2; }
-	h3 { @extend .h3; }
-	h4 { @extend .h4; }
-	h5 { @extend .h5; }
-	h6 { @extend .h6; }
+	h1, .h1 { @extend .h1; }
+	h2, .h2 { @extend .h2; }
+	h3, .h3 { @extend .h3; }
+	h4, .h4 { @extend .h4; }
+	h5, .h5 { @extend .h5; }
+	h6, .h6 { @extend .h6; }
 	
 	p, li {
 		font-size: 15px; line-height: 20px;
@@ -99,5 +99,15 @@
 		th {
 			color: #333;
 		}
+	}
+
+	img[style*="float:left"],
+	img[style*="float: left"] {
+		margin: 0 20px 15px 0;
+	}
+
+	img[style*="float:right"],
+	img[style*="float: right"] {
+		margin: 0 0 15px 20px;
 	}
 }
