--- a/public/assets/scss/components/_footer.scss
+++ b/public/assets/scss/components/_footer.scss
@@ -1,4 +1,7 @@
 
 // ------------------------------------------------------------------------------------------------------
-// PAGE STYLES
+// FOOTER
 
+#footer {
+	
+}
