--- a/public/assets/scss/components/_global.scss
+++ b/public/assets/scss/components/_global.scss
@@ -8,15 +8,11 @@ body {
 }
 
 // ------------------------------------------------------------------------------------------------------
-// HEADER
+// FLEXSLIDER DEFAULTS
 
-#header {
+.flexslider {
 
-}
-
-// ------------------------------------------------------------------------------------------------------
-// FOOTER
-
-#footer {
-	
+	.flex-direction-nav {
+		line-height: normal;
+	}
 }
