--- a/public/assets/scss/pages/_home.scss
+++ b/public/assets/scss/pages/_home.scss
@@ -1,4 +1,4 @@
 
 // ------------------------------------------------------------------------------------------------------
-// REUSABLE ELEMENTS
+// HOMEPAGE
 
