--- a/public/assets/scss/utilities/_bootstrap.scss
+++ b/public/assets/scss/utilities/_bootstrap.scss
@@ -1,6 +1,6 @@
 
 // Core variables and mixins
-@import "../components/variables";
+@import "../variables";
 @import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
 
 // Reset and dependencies
