--- a/public/assets/scss/components/_fonts.scss
+++ b/public/assets/scss/components/_fonts.scss
@@ -4,6 +4,14 @@
 
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700");
 
+@font-face {
+  font-family: 'flexslider-icon';
+  src: url('/components/FlexSlider/fonts/flexslider-icon.eot');
+  src: url('/components/FlexSlider/fonts/flexslider-icon.eot?#iefix') format('embedded-opentype'), url('/components/FlexSlider/fonts/flexslider-icon.woff') format('woff'), url('/components/FlexSlider/fonts/flexslider-icon.ttf') format('truetype'), url('/components/FlexSlider/fonts/flexslider-icon.svg#flexslider-icon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 // ------------------------------------------------------------------------------------------------------
 // EXTENSIBLE FONT CLASSES
 
