--- a/public/assets/scss/screen.scss
+++ b/public/assets/scss/screen.scss
@@ -4,14 +4,17 @@
 
 @import "utilities/bootstrap";
 @import "../../components/fontawesome/scss/font-awesome";
+@import "../../components/bourbon/app/assets/stylesheets/bourbon";
 @import "utilities/mixins";
 @import "utilities/grid";
 @import "utilities/sprites";
 
+@import "components/fonts";
 @import "components/global";
-@import "components/type";
-@import "components/elements";
-@import "components/pages";
+@import "components/forms";
+@import "components/header";
+@import "components/footer";
+@import "utilities/pages";
 @import "components/editor";
 
 // ------------------------------------------------------------------------------------------------------
@@ -27,4 +30,58 @@
 	padding: 10px 0px;
 	text-align: center;
 	color: #999;
+}
+
+// ------------------------------------------------------------------------------------------------------
+// INLINE MEDIA QUERY EXAMPLES
+
+body {
+
+	//// HANDHELD : 0px - 479px
+
+	@media #{$hs} {
+
+	}
+
+	//// EXTRA SMALL : 480px - 767px
+
+	@media #{$xs} {
+
+	}
+	@media #{$xs-down} {
+
+	}
+	@media #{$xs-up} {
+
+	}
+
+	//// SMALL : 768px - 991px
+
+	@media #{$sm} {
+
+	}
+	@media #{$sm-down} {
+
+	}
+	@media #{$sm-up} {
+
+	}
+
+	//// MEDIUM : 992px - 1199px
+
+	@media #{$md} {
+
+	}
+	@media #{$md-down} {
+
+	}
+	@media #{$md-up} {
+
+	}
+
+	//// LARGE : 1200px >
+
+	@media #{$lg} {
+
+	}
 }
