--- a/public/assets/scss/utilities/_bootstrap.scss
+++ b/public/assets/scss/utilities/_bootstrap.scss
@@ -1,51 +1,51 @@
 
 // Core variables and mixins
 @import "../variables";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
 
 // Reset and dependencies
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/normalize";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/print";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/normalize";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/print";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
 
 // Core CSS
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/type";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/code";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/grid";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/tables";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/forms";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/type";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/code";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/grid";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/tables";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/forms";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
 
 // Components
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/input-groups";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/navs";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/breadcrumbs";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/pagination";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/pager";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/labels";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/badges";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/jumbotron";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/thumbnails";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/alerts";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/progress-bars";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/media";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/list-group";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/panels";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-embed";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/wells";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/close";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/input-groups";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navs";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/breadcrumbs";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/pagination";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/pager";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/labels";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/badges";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/jumbotron";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/thumbnails";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/alerts";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/progress-bars";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/media";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/list-group";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/panels";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-embed";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/wells";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/close";
 
 // Components w/ JavaScript
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/modals";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/tooltip";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/popovers";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/carousel";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/modals";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/tooltip";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/popovers";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/carousel";
 
 // Utility classes
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
-@import "../../../components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
