--- a/public/assets/scss/utilities/_bootstrap.scss
+++ b/public/assets/scss/utilities/_bootstrap.scss
@@ -1,5 +1,6 @@
 
 // Core variables and mixins
+@import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/variables";
 @import "../variables";
 @import "../../../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
 
