--- a/public/templates/03/assets/scss/components/_header.scss
+++ b/public/templates/03/assets/scss/components/_header.scss
@@ -10,7 +10,8 @@
 	}
 	.logo{
 		@extend .col-lg-6;@extend .col-md-6;@extend .col-sm-6;@extend .col-xs-6;@extend .col-hs-6;
-		padding: 64px 0px;
+		padding-top: 64px;
+		padding-bottom: 64px;
 	}
 
 	.right{
@@ -19,17 +20,37 @@
 
 		.top{
 			@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
+			padding:0;
+			li{
+				padding:0;
+				padding-left:1px;
+			}
+			a{
+				padding: 7px 10px;
+  				background: #eee;
+  				display:block;
+  				@extend .bold-font;
+			}
 		}
 		.middle{
 			@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
-			color: rgb(153, 153, 153);
-  			padding: 23px 15px 20px;
+			color: #999;
+  			padding: 23px 0 20px;
+  			.tel{
+  				font-size: 26px;
+  				line-height: 30px;
+  				@extend .light-font;
+  			}
 		}
 		.nav{
 			@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
-			margin: 0px 0px 5px;
-			padding-top:15px;
+			padding:0;
 			li{
+				padding:0;
+				font-size: 15px;
+				  line-height: 20px;
+				  margin: 0 0 0 28px;
+				  @extend .bold-font;
 				a{
 					display: block;
   					padding: 6px 2px;
