--- a/public/templates/04/assets/scss/components/_editor.scss
+++ b/public/templates/04/assets/scss/components/_editor.scss
@@ -3,7 +3,7 @@
 // RICH TEXT EDITOR CONTENT
 
 .editor {
-	
+	font-weight:normal;
 	&.cke_editable {
 		max-width: 755px;
 		@extend .clearfix;
@@ -22,10 +22,30 @@
 	}
 	
 	h1, .h1 { @extend .h1; }
-	h2, .h2 { @extend .h2; }
-	h3, .h3 { @extend .h3; }
-	h4, .h4 { @extend .h4; }
-	h5, .h5 { @extend .h5; }
+	h2, .h2 { 
+	  font-size: 21px;
+	  line-height: 28px;
+	  margin: 0 0 18px;
+	  font-weight: 400;
+	 }
+	h3, .h3 { 
+			font-size: 19px;
+		  line-height: 26px;
+		  margin: 0 0 18px;
+		   font-weight: 400;
+		} 
+	h4, .h4 { 
+		font-size: 17px;
+		  line-height: 24px;
+		  margin: 0 0 16px;
+		  font-weight: 700;
+		} 
+	h5, .h5 { 
+		font-size: 15px;
+		  line-height: 22px;
+		  margin: 0 0 14px; 
+		  font-weight: 700;
+	}
 	h6, .h6 { @extend .h6; }
 	
 	p, li {
@@ -88,7 +108,7 @@
 	
 	table {
 		border: 1px solid #d9d9d9;
-		margin: 0 0 22px 0;
+  		margin: 0 0 22px 0;
 		
 		td, th {
 			border: 1px solid #d9d9d9;
@@ -98,6 +118,7 @@
 		
 		th {
 			color: #333;
+			font-weight: normal;
 		}
 	}
 
