--- a/public/templates/04/assets/scss/components/_global.scss
+++ b/public/templates/04/assets/scss/components/_global.scss
@@ -17,6 +17,8 @@ a{
 	}
 }
 
+
+
 // ------------------------------------------------------------------------------------------------------
 // FLEXSLIDER DEFAULTS
 
@@ -26,6 +28,33 @@ a{
 	.flex-direction-nav {
 		line-height: normal;
 	}
+}
+
+.page-title{
+  font-size: 34px;
+  line-height: 38px;
+  margin: 0 0 20px;
+  padding: 0 0 16px;
+}
+
+.nav-secondary {
+  margin: 0 0 24px;
+  ul{
+  	@extend .list-unstyled;
+  	li{
+  		font-size: 14px;
+	  line-height: 18px;
+	  border-bottom: 1px solid #eee;
+	  @extend .regular-font;
+	  a{
+	  		display: block;
+  			padding: 10px 0;
+	  	}
+	  &.on{
+	  	@extend .bold-font;
+	  }
+  	}
+  }
 }
 
 .body-list{
