--- a/public/templates/04/assets/scss/components/_header.scss
+++ b/public/templates/04/assets/scss/components/_header.scss
@@ -43,11 +43,12 @@
 	}
 	.bottom{
 		.logo{
-			padding: 44px 0;
+			padding-top: 44px;
+			padding-bottom: 44px;
 			@extend .col-lg-6;@extend .col-md-8;@extend .col-sm-10;@extend .col-xs-16;@extend .col-hs-16;
 			img{
 				display: block;
-  				margin: 20px 0;
+  				margin: 0 20px;
   				max-width: 100%;
 			}
 			@media #{$xs-down} {
@@ -57,7 +58,8 @@
 		.expand-menu{
 			@extend .col-xs-8;@extend .col-hs-5;
 			@extend .pull-right;
-			padding: 44px 0;
+			padding-top: 44px;
+			padding-bottom: 44px;
 			margin: 0;
 			button{
 				margin:0;
@@ -71,7 +73,8 @@
 			@extend .col-lg-18;@extend .col-md-16;@extend .col-sm-14;@extend .col-xs-24;@extend .col-hs-24;
 			form{
 				display: block;
-				padding: 60px 0;
+				padding-top: 44px;
+				padding-bottom: 44px;
 				@extend .clearfix;
 				input{
 					@extend .pull-right;
@@ -95,6 +98,7 @@
 		ul{
 			
 			li{
+				padding:0;
 				a{
 					display:block;
 					padding: 13px 24px;
