--- a/public/templates/04/assets/scss/components/_header.scss
+++ b/public/templates/04/assets/scss/components/_header.scss
@@ -95,6 +95,7 @@
 	.nav{
 		border-top:1px 	rgb(238, 238, 238) solid;
 		border-bottom:1px 	rgb(238, 238, 238) solid;
+		padding:0;
 		ul{
 			
 			li{
@@ -102,7 +103,7 @@
 				a{
 					display:block;
 					padding: 13px 24px;
-					font-weight: 400;
+					@extend .regular-font;
 					&:hover{
 						text-decoration: underline;
 					}
