--- a/public/templates/01/assets/scss/components/_footer.scss
+++ b/public/templates/01/assets/scss/components/_footer.scss
@@ -14,38 +14,39 @@
 	.copy{
 		@extend .col-lg-6;@extend .col-md-6;@extend .col-sm-8;@extend .col-xs-24;@extend .col-hs-24;
 		@extend .no-padding-side;
-		@media #{$xs-down} {
-			text-align: center;
-		}
+		@extend .light-font;
 	}
 
 	.nav {
 		@extend .col-lg-18;@extend .col-md-18;@extend .col-sm-16;@extend .col-xs-24;@extend .col-hs-24;
-		@extend .text-right;
 		@extend .no-padding-side;
 		float:right;
 		overflow: hidden;
+		text-align: right;
 		@media #{$xs-down} {
-			text-align: center;
-			float:none;
+			text-align: left;
 		}
 		ul{
 			@extend .list-unstyled;
-
-			@media #{$md-up} {
-				@extend .list-inline;
-			}
-
 			li {
 				margin: 0 0 0 20px;
+				display: inline-block;
+				@media #{$xs-down} {
+					display: block;
+					margin:0;
+					border-bottom: 1px solid rgb(68, 68, 68);
+				}
 			}
 
 			a {
 				display: block;
-			}
-
-			a:hover {
-				text-decoration: underline;
+				@extend .light-font;
+				@media #{$xs-down} {
+					padding: 12px 20px  12px 0;
+				}
+				&:hover{
+					text-decoration: underline;
+				}
 			}
 		}
 	}
