--- a/public/templates/01/assets/scss/components/_global.scss
+++ b/public/templates/01/assets/scss/components/_global.scss
@@ -18,19 +18,30 @@ a{
 	}
 }
 
+
 *{
 	line-height:24px;
 }
 
-.out-of-screen{
-	position:absolute;
-	//top:-999999px;
+.no-pad{
+	margin-left: -$grid-gutter-width !important;
+    margin-right: -$grid-gutter-width !important;
 }
+
+.pad-top{
+	padding-top:$grid-gutter-width;
+}
+
+.pad-bot{
+	padding-bottom:$grid-gutter-width;
+}
+
 // ------------------------------------------------------------------------------------------------------
 // FLEXSLIDER DEFAULTS
 
 .flexslider {
 	border:none;
+	margin:0;
 	.flex-direction-nav {
 		line-height: normal;
 	}
@@ -70,11 +81,6 @@ a{
 	}
 }
 
-
-.no-padding-side{
-	padding-left:0 !important;
-	padding-right:0 !important;
-}
 //--------------
 //Item list
 
@@ -103,9 +109,9 @@ a{
 }
 
 .item-list{
+	@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
 	@extend .clearfix;
-	margin: 20px  (-($grid-gutter-width/2)) 0;
-	a{
+	.item{
 		figure{
 			position:relative;
 			img {
@@ -129,7 +135,7 @@ a{
 	}
 	/* Overlay the figcaptions onto the image */
 	&.overlay {
-		> a {
+		> .item {
 			margin-bottom: 24px;
 			figure{
 				position:relative;
@@ -200,5 +206,71 @@ a{
 		}
 
 		
+	}
+}
+
+.page-title{
+  font-size: 34px;
+  line-height: 38px;
+  margin: 0 0 20px;
+  padding: 0 0 16px;
+}
+
+.nav-secondary {
+  margin: 0 0 24px;
+  ul{
+  	@extend .list-unstyled;
+  	li{
+  		font-size: 14px;
+	  line-height: 18px;
+	  border-bottom: 1px solid #eee;
+	  @extend .regular-font;
+	  a{
+	  		display: block;
+  			padding: 10px 0;
+	  	}
+	  &.on{
+	  	@extend .bold-font;
+	  }
+  	}
+  }
+}
+
+.responsive-table{
+	@media #{$hs} {
+		  max-width: 100%; // adjust to your needs
+		  tr {
+		    border-top: 1px solid #ddd;
+		    border-bottom: 1px solid #ddd;
+		  }  
+		  th {
+		    display: none; // for accessibility, use a visually hidden method here instead! Thanks, reddit!   
+		  }
+		  
+		  td {
+		    display: block; 
+		    border:none !important;
+		    
+		    &:first-child {
+		      padding-top: .5em;
+		    }
+		    &:last-child {
+		      padding-bottom: .5em;
+		    }
+
+		    &:before {
+		      content: attr(data-th)": "; // who knew you could do this? The internet, that's who.
+		      font-weight: bold;
+
+		      // optional stuff to make it look nicer
+		      width: 6.5em; // magic number :( adjust according to your own content
+		      display: inline-block;
+		    }
+		  }
+		  
+		  th, td {
+		    text-align: left;
+
+		  }	  	  
 	}
 }
