--- a/public/templates/01/assets/scss/components/_header.scss
+++ b/public/templates/01/assets/scss/components/_header.scss
@@ -4,17 +4,12 @@
 
 #header {
 	background: #fff;
-
 	.logo {
 		@extend .col-lg-6;@extend .col-md-6;@extend .col-sm-8;@extend .col-xs-18;@extend .col-hs-18;
 		padding-top: 50px;
 		padding-bottom: 50px;
 		img{
 			max-width: 100%;
-		}
-		@media #{$xs-down} {
-			padding-top: 30px;
-			padding-bottom: 30px;
 		}
 	}
 
@@ -25,6 +20,37 @@
 		padding-bottom: 24px;
 		ul{
 			@extend .list-unstyled; @extend .list-inline;
+			margin:0;
+			padding:0;
+			li{
+				margin-left:6px;
+				padding:0;
+				&:first-child{
+					margin-left:0;	
+				}
+				&.on{
+					text-decoration: underline;
+				}
+			}
+			a,span{
+				padding:4px 10px;
+				display: block;
+			}
+		}
+		.top {
+			float: right;
+			padding: 2px 0;
+		}
+		.nav{
+			float:right;
+			padding: 2px 0;
+			clear: both;
+			border-top: 1px solid #eee;
+			li{
+				a{
+					@extend .medium-font;
+				}
+			}
 		}
 	}
 
@@ -32,17 +58,9 @@
 		@extend .col-xs-4;@extend .col-hs-4;
 		padding-top: 50px;
 		padding-bottom: 50px;
-		@media #{$xs-down} {
-			padding-top: 30px;
-			padding-bottom: 30px;
-		}
 	}
-
 	.nav-mobile{
 		@extend .col-xs-24;@extend .col-hs-24;
-		@media #{$sm-up} {
-			display: none !important;
-		}
 		ul{
 			@extend .list-unstyled;
 			@extend .text-center;
@@ -56,52 +74,6 @@
 			}
 		}
 	}
-
-	.top {
-		float: right;
-		border-bottom: 1px solid #eee;
-		padding: 2px 0;
-
-		li {
-			font-size: 14px;
-			margin: 0 0 0 6px;
-		}
-
-		li:first-child {
-			margin-left: 0;
-		}
-
-		a, span {
-			padding: 4px 10px;
-		}
-	}
-
-	.nav {
-		position: relative; top: -1px;
-		clear: both; float: right;
-		border-top: 1px solid #eee;
-		padding-top: 6px;
-		padding-bottom: 6px;
-
-		li {
-			@extend .medium-font;
-			font-size: 15px;
-			margin: 0;
-		}
-
-		li:first-child {
-			margin-left: 0;
-		}
-
-		a, span {
-			padding: 4px 10px;
-		}
-
-		li.on {
-			text-decoration: underline;
-		}
-	}
-
 	.expand-menu {
 		button{
 			float:right;
