--- a/public/templates/02/assets/scss/components/_banners.scss
+++ b/public/templates/02/assets/scss/components/_banners.scss
@@ -1,28 +1,29 @@
 #top-banner{
 	.homepage-slider{
+		@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;
 		.slides{
 			li{
 				position:relative;
 				@extend .clearfix;
 				img{
-					@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;
-					position:absolute;
+					position:relative;
 					width:100%;
 					height:auto;
 					padding: 0;
 					margin:0;
+					z-index: 1;
 					@extend .hidden-xs;@extend .hidden-hs;
 				}
 				.slide-content{
-					position:relative;
+					position:absolute;
 					@extend .col-centered;
 					@extend .text-center;
 					color: #000;
 					max-width: 520px;
-					margin: 5% auto 5%;
 					padding: 30px;
 					background: rgba(255, 255, 255, 0.8);
-					
+					z-index: 9999;
+					top:0;
 					.title {
 						@extend .heading-font; font-size: 42px; line-height: 40px;
 						max-width: 650px;
@@ -45,7 +46,7 @@
 			}
 		}
 		.flex-control-nav{
-			bottom:-30px;
+			bottom:5px;
 			@extend .hidden-xs;@extend .hidden-hs;
 		}
 
@@ -55,13 +56,6 @@
 					line-height: initial;
 				}
 			}
-		}
-		.flex-direction-nav .flex-prev {
-			left:30px;
-		}
-
-		.flex-direction-nav .flex-next {
-			right:30px;
 		}
 	}
 }
