--- a/public/templates/02/assets/scss/components/_global.scss
+++ b/public/templates/02/assets/scss/components/_global.scss
@@ -22,15 +22,24 @@ a{
 	line-height:24px;
 }
 
-.out-of-screen{
-	position:absolute;
-	//top:-999999px;
+.no-pad{
+	margin-left: -$grid-gutter-width !important;
+    margin-right: -$grid-gutter-width !important;
+}
+
+.pad-top{
+	padding-top:$grid-gutter-width;
+}
+
+.pad-bot{
+	padding-bottom:$grid-gutter-width;
 }
 // ------------------------------------------------------------------------------------------------------
 // FLEXSLIDER DEFAULTS
 
 .flexslider {
 	border:none;
+	margin:0;
 	.flex-direction-nav {
 		line-height: normal;
 	}
@@ -70,42 +79,39 @@ a{
 	}
 }
 
-
-.no-padding-side{
-	padding-left:0 !important;
-	padding-right:0 !important;
-}
 //--------------
 //Item list
 
 .block-heading {
 	@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
-	position: relative;
-	background: #333;
-	color: #fff;
-	padding: 10px 0 12px;
-	margin-bottom: 25px;
-	.heading {
-		@extend .heading-font-2; font-size: 20px; line-height: 24px;
-		margin: 0;
-		padding: 0 80px;
-		text-align: center;
-	}
-
-	a{
-		position: absolute; top: 12px; right: 14px;
-		font-size: 15px; line-height: 24px;
+	div{
+		position: relative;
+		background: #333;
 		color: #fff;
-		&:hover {
-			text-decoration: underline;
+		padding-top: 10px;
+		padding-bottom: 12px;
+		margin-bottom: 25px;
+		.heading {
+			@extend .heading-font-2; font-size: 20px; line-height: 24px;
+			margin: 0;
+			padding: 0 80px;
+			text-align: center;
+		}
+
+		a{
+			position: absolute; top: 12px; right: 14px;
+			font-size: 15px; line-height: 24px;
+			color: #fff;
+			&:hover {
+				text-decoration: underline;
+			}
 		}
 	}
 }
 
 .item-list{
-	@extend .clearfix;
-	margin: 20px  (-($grid-gutter-width/2)) 0;
-	a{
+	@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
+	.item{
 		figure{
 			position:relative;
 			img {
@@ -129,7 +135,7 @@ a{
 	}
 	/* Overlay the figcaptions onto the image */
 	&.overlay {
-		> a {
+		> .item {
 			margin-bottom: 24px;
 			figure{
 				position:relative;
