--- a/public/templates/02/assets/scss/components/_header.scss
+++ b/public/templates/02/assets/scss/components/_header.scss
@@ -3,49 +3,34 @@
 // HEADER
 
 #header {
-	ul{
-		@extend .list-unstyled; @extend .list-inline;
-	}
-	.item-list{
-		margin:0;
-	}
 	.top{
-		@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
-		@extend .no-padding-side;
 		.left{
 			@extend .col-lg-12;@extend .col-md-12;@extend .col-sm-12;@extend .col-xs-12;@extend .col-hs-12;
-			li {
-				margin-right: 20px;
-			}
 		}
 		.right{
 			@extend .col-lg-12;@extend .col-md-12;@extend .col-sm-12;@extend .col-xs-12;@extend .col-hs-12;
-			ul{
-				@extend .pull-right;
+			@extend .text-right;
+		}
+
+		ul{
+			@extend .list-unstyled; @extend .list-inline;
+			margin:0;
+			li{
+				font-size: 15px;
+  				line-height: 20px;
+  				margin: 0px 0px 0px 20px;
+  				padding:0;
+  				&:first-child{
+  					margin:0;
+  				}
+				a{
+					display:block;
+					padding: 14px 2px;
+				}
 			}
-		}
-
-		li {
-			font-size: 14px; line-height: 20px;
-		}
-
-		a, span {
-			display: block;
-			padding: 14px 0;
-		}
-
-		li {
-			font-size: 15px; line-height: 20px;
-			padding: 0;
-		}
-
-		li:first-child {
-			margin-left: 0;
 		}
 	}
 	.middle{
-		@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
-		@extend .no-padding-side;
 		.left{
 			@extend .col-lg-6;@extend .col-md-6;@extend .col-sm-6;@extend .col-xs-6;@extend .col-hs-6;
 		}
@@ -54,6 +39,7 @@
 			@extend .pull-right;
 			form{
 				width:100%;
+				padding:0;
 				input{
 					@extend .pull-right;
 					@extend .clearfix;
@@ -69,8 +55,7 @@
 		}
 		.logo{
 			@extend .col-lg-12;@extend .col-md-12;@extend .col-sm-12;@extend .col-xs-12;@extend .col-hs-12;
-			padding: 4px 0 30px;
-
+			padding: 4px 0px 40px;
 			img {
 				display: block;
 				margin: 0 auto;
@@ -81,39 +66,32 @@
 	.nav{
 		@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
 		@extend .text-center;
-		@extend .no-padding-side;
-		li {
-			@extend .medium-font; font-size: 15px; line-height: 20px;
-			margin: 0 0 0 6px;
-		}
-
-		li:first-child {
-			margin-left: 0;
-		}
-
-		a, span {
-			display: block;
-			padding: 13px 14px;
-		}
-
-		li.on {
-			text-decoration: underline;
-		}
-	}
-
-	.nav-mobile{
-		@extend .col-lg-6-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
-
+		margin:0;
+		padding-top:0;
 		ul{
 			@extend .list-unstyled;
-			@extend .text-center;
-			width:70%;
-			margin:0 auto 0;
-
-			li{
-				width:100%;
-				padding:10px 0;
-				border-bottom:1px black solid;
+			margin:0;
+			li {
+				@extend .regular-font; font-size: 15px; line-height: 20px;
+				margin: 0 0 0 6px;
+				display: inline-block;
+				&:first-child{
+					margin-left: 0;
+				}
+				&.on{
+					text-decoration: underline;
+				}
+				a, span {
+					display: block;
+					padding: 13px 14px;
+				}
+			}
+			@media #{$xs} {
+				width:70%;
+				margin:0 auto 0;
+				li{
+					display: block;
+				}
 			}
 		}
 	}
