--- a/public/templates/02/assets/scss/pages/_home.scss
+++ b/public/templates/02/assets/scss/pages/_home.scss
@@ -4,60 +4,54 @@
 
 
 .body{
-	.large{
-		font-size: 26px; line-height: 30px;
-		margin: 20px 0 40px 0;
+	.editor{
+		@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
 	}
-	
 	.body-top{
-		.item-list{
-			margin: 20px  (-($grid-gutter-width/2));
-			a{	
-				@extend .col-lg-8;@extend .col-md-8;@extend .col-sm-8;@extend .col-xs-12;@extend .col-hs-12;
-			}
+		.item{	
+			@extend .col-lg-8;@extend .col-md-8;@extend .col-sm-8;@extend .col-xs-12;@extend .col-hs-12;
 		}
+	}
+
+	.breadcrumbs{
+		@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
 	}
 
 	.body-middle{
 		.item-list{
-			margin: 20px  (-($grid-gutter-width/2));
-			a{	
+			.item{	
 				@extend .col-lg-6;@extend .col-md-6;@extend .col-sm-8;@extend .col-xs-12;@extend .col-hs-12;
+				margin-bottom: 25px;
 			}
 		}
 	}
 
 	.body-bottom{
 		.item-list{
-			display:table;
-			width:100%;
-			margin: 30px 0;
-			div{
-				display:table-cell;
-				float: none;
-				vertical-align: middle;
-				@extend .col-lg-8;@extend .col-md-8;@extend .col-sm-8;@extend .col-xs-12;@extend .col-hs-12;
-				margin: 20px 0;
-				padding: 0 20px;
+			.item{
+				@extend .col-lg-8; @extend .col-md-8;@extend .col-sm-8;@extend .col-xs-12;@extend .col-hs-12;
+				padding-top: 20px;
+				padding-bottom: 20px;
 				border-left: 2px solid #aaa;
 				text-align:center;
 				.heading{
 					font-size: 18px;
-						margin: 0 0 10px;
+					margin: 0 0 10px;
 				}
 				.text{
 					font-size: 13px;
-						line-height: 20px;
-						margin-bottom: 0;
+					line-height: 20px;
+					margin-bottom: 0;
+				}
+				&:first-of-type{
+					border-left: none;
 				}
 			}
-			div:first-child{
-				border-left: none;
-			}
+			hr{
+				@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
+				border-top: 2px solid #aaa;
+				box-sizing: border-box;
+			}		
 		}
-		hr{
-			width:100%;
-			border: 1px solid #aaa;
-		}		
 	}
 }
