--- a/public/templates/03/assets/scss/components/_banner.scss
+++ b/public/templates/03/assets/scss/components/_banner.scss
@@ -1,25 +1,26 @@
 #top-banner{
 	.homepage-slider{
+		@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;
 		.slides{
 			li{
-				@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;
 				position:relative;
 				padding:0;
 				@extend .clearfix;
 				img{
-					@extend .col-lg-12;@extend .col-md-12;@extend .col-sm-12;
+					width:50%;
 					padding: 0;
 					margin:0;
-					display: none;
 					@extend .hidden-xs;@extend .hidden-hs;
+					float:right;
 				}
 
 				.slide-content{
-					@extend .col-lg-12;@extend .col-md-12;@extend .col-sm-12;
-					
+					width:50%;
+					padding: 30px;
 					position:relative;
 					color: #000;
-					padding: 30px;
+					float:left;
+					
 					background: rgba(255, 255, 255, 0.8);
 					@media #{$xs-down} {
 						color: #000;
@@ -44,17 +45,6 @@
 						@extend .btn;
 					}
 				}
-				.body-list{
-					margin: 0 (-($grid-gutter-width/2));
-				}
-			}
-			li.flex-active-slide{
-				img{
-					display:block;
-				}
-			}
-			.body-list{
-				margin: 0 (-($grid-gutter-width/2));
 			}
 		}
 
