--- a/public/templates/03/assets/scss/components/_global.scss
+++ b/public/templates/03/assets/scss/components/_global.scss
@@ -17,9 +17,22 @@ a{
 		text-decoration: none;
 	}
 }
-img{
-	max-width:100%;
-	height:auto;
+
+.no-pad{
+	margin-left: -$grid-gutter-width !important;
+    margin-right: -$grid-gutter-width !important;
+}
+
+.pad-top{
+	padding-top:$grid-gutter-width;
+}
+
+.pad-bot{
+	padding-bottom:$grid-gutter-width;
+}
+
+*{
+	line-height:24px;
 }
 
 // ------------------------------------------------------------------------------------------------------
@@ -27,7 +40,102 @@ img{
 
 .flexslider {
 	border: none;
+	margin:0;
 	.flex-direction-nav {
 		line-height: normal;
+	}
+}
+
+//--------------
+//Item list
+
+.block-heading {
+	@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
+	div{
+		position: relative;
+		background: #999999;
+		color: #fff;
+		padding: 10px 0 12px;
+		margin-bottom: 25px;
+		.heading {
+			@extend .heading-font-2; font-size: 20px; line-height: 24px;
+			margin: 0;
+			padding: 0 80px;
+			text-align: center;
+		}
+
+		a{
+			position: absolute; top: 12px; right: 14px;
+			font-size: 15px; line-height: 24px;
+			color: #fff;
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+	}
+}
+
+.item-list{
+	@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
+	.item{
+		figure{
+			position:relative;
+			img {
+				margin: 0;
+				max-width: 100%;
+			}
+
+			figcaption {
+				font-size: 13px; line-height: 16px;
+				padding: 8px 0;
+			}
+		}
+		&:hover {
+			img {
+				opacity: .8;
+			}
+		}
+	}
+	p{
+		margin-bottom: 30px;
+	}
+	/* Overlay the figcaptions onto the image */
+	&.overlay {
+		> .item {
+			margin-bottom: 24px;
+			figure{
+				position:relative;
+				img {
+					margin: 0;
+				}
+
+				figcaption {
+
+					@include transition(background-color .15s cubic-bezier(0.215, 0.610, 0.355, 1.000));
+					transition-property: background-color, padding;
+
+					position: absolute; bottom: -1px; left: 0px; right: 0px;
+					background: rgb(230,230,230); background: rgba(255,255,255, .7);
+					font-size: 13px; line-height: 16px;
+					padding: 8px 12px;
+
+					@media #{$xs-down} {
+						position: relative;
+						background: rgb(238, 238, 238);
+					}
+				}
+			}
+
+			&:hover {
+				@media #{$md-up} {
+					figcaption {
+						background: rgb(245,245,245); background: rgba(255,255,255, .9);
+						padding-top: 14px; padding-bottom: 14px;
+						
+					}
+				}
+			}
+
+		}
 	}
 }
