--- a/public/templates/03/assets/scss/pages/_home.scss
+++ b/public/templates/03/assets/scss/pages/_home.scss
@@ -7,150 +7,16 @@
 	margin: 20px 0 40px 0;
 }
 
-.block-heading {
-	@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
-	position: relative;
-	background: #999999;
-	color: #fff;
-	padding: 10px 0 12px;
-	margin-bottom: 25px;
-	.heading {
-		@extend .heading-font-2; font-size: 20px; line-height: 24px;
-		margin: 0;
-		padding: 0 80px;
-		text-align: center;
-	}
-
-	a{
-		position: absolute; top: 12px; right: 14px;
-		font-size: 15px; line-height: 24px;
-		color: #fff;
-		&:hover {
-			text-decoration: underline;
-		}
-	}
-}
-
-.body-list{
-	@extend .clearfix;
-	a{
-		display:block;
-		figure{
-			position:relative;
-			img {
-				margin: 0;
-			}
-
-			figcaption {
-				font-size: 13px; line-height: 16px;
-				padding: 8px 0;
-			}
-		}
-		&:hover {
-			img {
-				opacity: .8;
-			}
-		}
-	}
-	p{
-		margin-bottom: 30px;
-	}
-	/* Overlay the figcaptions onto the image */
-	&.overlay {
-		> a {
-			margin-bottom: 24px;
-			figure{
-				position:relative;
-				img {
-					margin: 0;
-				}
-
-				figcaption {
-
-					@include transition(background-color .15s cubic-bezier(0.215, 0.610, 0.355, 1.000));
-					transition-property: background-color, padding;
-
-					position: absolute; bottom: -1px; left: 0px; right: 0px;
-					background: rgb(230,230,230); background: rgba(255,255,255, .7);
-					font-size: 13px; line-height: 16px;
-					padding: 8px 12px;
-
-					@media #{$xs-down} {
-						position: relative;
-						background: rgb(238, 238, 238);
-					}
-				}
-			}
-
-			&:hover {
-				@media #{$md-up} {
-					figcaption {
-						background: rgb(245,245,245); background: rgba(255,255,255, .9);
-						padding-top: 14px; padding-bottom: 14px;
-						
-					}
-				}
-			}
-
-		}
-	}
-}
-
-.breadcrumbs{
-	ul{
-		@extend .list-unstyled; @extend .list-inline;
-		li{
-			a{
-				font-size: 14px;
-				line-height: 24px;
-				color: rgb(153, 153, 153);
-				text-transform: uppercase;
-			}
-			&.on{
-				a{
-					color:#000;
-				}
-			}
-			&:hover{
-				a{
-					text-decoration: underline;
-				}
-			}
-		}
-		li:after{
-			content: "/";
-			padding-left:10px;
-			color: rgb(153, 153, 153);
-		}
-
-		li:last-child:after{
-			content: "";
-		}
-
-		
-	}
-}
-
 .body{
 	.body-top{
-		.body-list{
-			a{	
-				@extend .col-lg-8;@extend .col-md-8;@extend .col-sm-8;@extend .col-xs-12;@extend .col-hs-12;
-				h3{
-					font-size: 18px;
-					line-height: 24px;
-					margin: 0px 0px 8px;
-					color: rgb(102, 102, 102);
-				}
-			}
+		.item{	
+			@extend .col-lg-8;@extend .col-md-8;@extend .col-sm-8;@extend .col-xs-12;@extend .col-hs-12;
 		}
 	}
 
 	.body-middle{
-		.body-list{
-			a{	
-				@extend .col-lg-6;@extend .col-md-6;@extend .col-sm-6;@extend .col-xs-12;@extend .col-hs-12;
-			}
+		.item{	
+			@extend .col-lg-6;@extend .col-md-6;@extend .col-sm-6;@extend .col-xs-12;@extend .col-hs-12;
 		}
 	}
 }
