added comtact page om all templates and finish cut 1

--- a/public/assets/scss/variables.scss
+++ b/public/assets/scss/variables.scss
@@ -151,12 +151,12 @@ $table-border-color:            #ddd;
 
 $btn-font-weight:                normal;
 
-$btn-default-color:              #333;
+$btn-default-color:              #fff;
 $btn-default-bg:                 #fff;
-$btn-default-border:             #ccc;
+$btn-default-border:             #fff;
 
 $btn-primary-color:              #fff;
-$btn-primary-bg:                 $brand-primary;
+$btn-primary-bg:                 #fff;
 $btn-primary-border:             darken($btn-primary-bg, 5%);
 
 $btn-success-color:              #fff;
