--- a/public/templates/04/assets/scss/variables.scss
+++ b/public/templates/04/assets/scss/variables.scss
@@ -3,7 +3,7 @@
 // Bootstrap Variables
 // --------------------------------------------------
 
-$fa-font-path: "../../../bower_components/fontawesome/fonts";
+$fa-font-path: "../../../../assets/fonts";
 $bootstrap-sass-asset-helper: false !default;
 
 //== Colors
