--- a/public/templates/02/assets/scss/components/_banners.scss
+++ b/public/templates/02/assets/scss/components/_banners.scss
@@ -15,25 +15,27 @@
 					@extend .hidden-xs;@extend .hidden-hs;
 				}
 				.slide-content{
+					@extend .col-lg-16;@extend .col-md-16;@extend .col-sm-16;
+					@extend .col-lg-push-4;@extend .col-md-push-4;@extend .col-sm-push-4;
 					position:absolute;
 					@extend .col-centered;
 					@extend .text-center;
 					color: #000;
-					max-width: 520px;
 					padding: 30px;
+					margin-top: 80px;
 					background: rgba(255, 255, 255, 0.8);
 					z-index: 9999;
 					top:0;
 					.title {
 						@extend .heading-font; font-size: 42px; line-height: 40px;
-						max-width: 650px;
-						margin: 0 0 24px;
+						max-width: 80%;
+						margin: 0 auto 24px;
 					}
 
 					.text {
 						font-size: 20px; line-height: 24px;
-						max-width: 420px;
-						margin: 0 0 30px;
+						max-width: 70%;
+						margin: 0 auto 30px;
 						@media #{$xs-down} {
 							margin: 30px auto 30px;
 						}
