--- a/public/templates/04/assets/scss/pages/_contact.scss
+++ b/public/templates/04/assets/scss/pages/_contact.scss
@@ -1,4 +1,8 @@
 #contact{
+	margin-bottom: 25px;
+	.container{
+		background: #fff;
+	}
 	.page-title{
 		@extend .col-lg-24;@extend .col-md-24;@extend .col-sm-24;@extend .col-xs-24;@extend .col-hs-24;
 	}
