--- a/public/templates/02/assets/scss/pages/_home.scss
+++ b/public/templates/02/assets/scss/pages/_home.scss
@@ -20,7 +20,7 @@
 	.body-middle{
 		.item-list{
 			.item{	
-				@extend .col-lg-6;@extend .col-md-6;@extend .col-sm-8;@extend .col-xs-12;@extend .col-hs-12;
+				@extend .col-lg-6;@extend .col-md-6;@extend .col-sm-6;@extend .col-xs-12;@extend .col-hs-12;
 				margin-bottom: 25px;
 			}
 		}
@@ -33,6 +33,9 @@
 				padding-top: 20px;
 				padding-bottom: 20px;
 				border-left: 2px solid #aaa;
+				@media #{$xs-down} {
+					border-left: none;
+				}
 				text-align:center;
 				.heading{
 					font-size: 18px;
