--- a/public/templates/03/assets/scss/components/_global.scss
+++ b/public/templates/03/assets/scss/components/_global.scss
@@ -35,6 +35,37 @@ a{
 	line-height:24px;
 }
 
+.btn{
+	display: inline-block;
+	padding: 12px 20px;
+	background: #eee;
+	border: none;
+	border-radius: 6px;
+
+	&:hover {
+		background: #ddd;
+	}
+
+	// Small caps
+
+	&.sc {
+		text-transform: uppercase;
+		font-size: 85%; letter-spacing: 0.1em;
+		@extend .bold-font;
+	}
+
+	// Button colour combinations
+	
+	&.inverse {
+		background: #222;
+		color: #fff;
+
+		&:hover {
+			background: #111;
+		}
+	}
+}
+
 // ------------------------------------------------------------------------------------------------------
 // FLEXSLIDER DEFAULTS
 
@@ -88,6 +119,14 @@ a{
 			figcaption {
 				font-size: 13px; line-height: 16px;
 				padding: 8px 0;
+				h3{
+					@extend .light-font;
+					font-size: 18px;
+					line-height: 16px;
+				}
+				p{
+					line-height: 16px;
+				}
 			}
 		}
 		&:hover {
