--- a/public/templates/03/assets/scss/variables.scss
+++ b/public/templates/03/assets/scss/variables.scss
@@ -36,7 +36,7 @@ $text-color:            $gray-dark !default;
 //** Global textual link color.
 $link-color:            $brand-primary !default;
 //** Link hover color set via `darken()` function.
-$link-hover-color:      darken($link-color, 15%) !default;
+$link-hover-color:      $gray-dark !default;
 //** Link hover decoration.
 $link-hover-decoration: underline !default;
 
