flexslider bug fix for template 01

--- a/public/templates/01/assets/scss/components/_banners.scss
+++ b/public/templates/01/assets/scss/components/_banners.scss
@@ -1,10 +1,13 @@
 #top-banner{
 	.homepage-slider{
+		overflow: hidden;
 		.slides{
 			li{
 				position:relative;
-				@extend .clearfix;
+				//@extend .clearfix;
 				overflow: hidden;
+				@include backface-visibility(hidden);
+				display: block;
 				img{
 					position:absolute;
 					top: 0%; left: 50%;
