--- a/public/templates/01/assets/scss/utilities/_bootstrap.scss
+++ b/public/templates/01/assets/scss/utilities/_bootstrap.scss
@@ -1,7 +1,8 @@
 
 // Core variables and mixins
-@import "../variables";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
+@import "../variables";
+@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/variables";
 
 // Reset and dependencies
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/normalize";
