--- a/public/templates/03/assets/scss/utilities/_bootstrap.scss
+++ b/public/templates/03/assets/scss/utilities/_bootstrap.scss
@@ -1,6 +1,7 @@
 
 // Core variables and mixins
 @import "../variables";
+@import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/variables";
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
 
 // Reset and dependencies
